--- a/views/genre_form.pug
+++ b/views/genre_form.pug
@@ -7,7 +7,8 @@ block content
         div.form-group
             label(for='name') Genre: 
             input#name.form-control(type='text',
-            placeholder='Fantasy, Poetry etc.', name='name',
+            placeholder='Fantasy, Poetry etc.', 
+            name='name', required='true',
             value=(undefined===genre ? '': genre.name))
         button.btn.btn-primary(type='submit') Submit
     
