Add delete GET and POST

--- a/views/bookinstance_detail.pug
+++ b/views/bookinstance_detail.pug
@@ -20,3 +20,5 @@ block content
     p #[strong Due back:] #{bookinstance.due_back_formatted}
 
   hr
+  p
+    a(href=bookinstance.url+'/delete') Delete book instance
