--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,21 @@
 .sidebar-nav {
   margin-top: 20px;
-  padding: 0;
+  padding: 5px;
   list-style: none;
+  font-weight: bold;
+  background-color: rgb(255, 230, 230);
+}
+
+.index_dynamic h1 {
+  margin-top: 0;
+}
+
+.col-sm-10 ul {
+  padding-left: 20px;
+}
+
+h1 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: rgb(255, 80, 80);
 }
