--- a/views/index.pug
+++ b/views/index.pug
@@ -2,10 +2,9 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #[em LocalLibrary], a very basic Express website developed as a tutorial example on the Mozilla Developer Network.
+  p #[strong Welcome to the #[em Little Library], a sample website for library records.]
 
-  h1 Dynamic content
-
+  h1 Library content
   if error
     p Error getting dynamic content.
   else
